--- a/.virtual_documents/NoSQL_setup_starter.ipynb
+++ b/.virtual_documents/NoSQL_setup_starter.ipynb
@@ -43,9 +43,34 @@ establishments = db['establishments']
 
 
 # Create a dictionary for the new restaurant data
-new_restaurant = {"BusinessName": "Penang Flavours",
-                 "BusinessType": "Restaurant",
-                 "LocalAuthorityName": "Greenwich"}
+new_restaurant = {
+    "BusinessName":"Penang Flavours",
+    "BusinessType":"Restaurant/Cafe/Canteen",
+    "BusinessTypeID":"",
+    "AddressLine1":"Penang Flavours",
+    "AddressLine2":"146A Plumstead Rd",
+    "AddressLine3":"London",
+    "AddressLine4":"",
+    "PostCode":"SE18 7DY",
+    "Phone":"",
+    "LocalAuthorityCode":"511",
+    "LocalAuthorityName":"Greenwich",
+    "LocalAuthorityWebSite":"http://www.royalgreenwich.gov.uk",
+    "LocalAuthorityEmailAddress":"health@royalgreenwich.gov.uk",
+    "scores":{
+        "Hygiene":"",
+        "Structural":"",
+        "ConfidenceInManagement":""
+    },
+    "SchemeType":"FHRS",
+    "geocode":{
+        "longitude":"0.08384000",
+        "latitude":"51.49014200"
+    },
+    "RightToReply":"",
+    "Distance":4623.9723280747176,
+    "NewRatingPending":True
+}
 
 
 # Insert the new restaurant into the collection
@@ -65,9 +90,9 @@ for result in results:
 # Find the BusinessTypeID for "Restaurant/Cafe/Canteen" and return only the BusinessTypeID and BusinessType fields
 query = {'BusinessType': 'Restaurant/Cafe/Canteen'}
 fields = {"BusinessTypeID": 1, "BusinessType": 1}
-results = establishments.find(query, fields)
+results = establishments.find_one(query, fields)
 
-pprint(results[0])
+pprint(results)
 
 
 
