--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -112,32 +112,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'The Bay',\n",
+      "{'AddressLine1': '27 Granville Road',\n",
       " 'AddressLine2': 'St Margarets Bay',\n",
       " 'AddressLine3': 'Kent',\n",
       " 'AddressLine4': '',\n",
-      " 'BusinessName': 'The Coastguard Inn',\n",
-      " 'BusinessType': 'Pub/bar/nightclub',\n",
-      " 'BusinessTypeID': 7843,\n",
+      " 'BusinessName': 'Lenox House',\n",
+      " 'BusinessType': 'Hotel/bed & breakfast/guest house',\n",
+      " 'BusinessTypeID': 7842,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4587.347174863443,\n",
-      " 'FHRSID': 1034540,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000078691',\n",
+      " 'Distance': 4587.440906956158,\n",
+      " 'FHRSID': 632212,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000043474',\n",
       " 'LocalAuthorityCode': '182',\n",
       " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
       " 'LocalAuthorityName': 'Dover',\n",
       " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT15 6DY',\n",
-      " 'RatingDate': '2022-08-17T00:00:00',\n",
+      " 'PostCode': 'CT15 6DS',\n",
+      " 'RatingDate': '2020-03-17T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('665413f2d68b86fee1e07407'),\n",
-      " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1034540',\n",
+      " '_id': ObjectId('66544d977f6e63fad15f339d'),\n",
+      " 'geocode': {'latitude': '51.152411', 'longitude': '1.385585'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/632212',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -147,7 +147,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 0, 'Structural': 0}}\n"
      ]
     }
    ],
@@ -191,9 +191,34 @@
    "outputs": [],
    "source": [
     "# Create a dictionary for the new restaurant data\n",
-    "new_restaurant = {\"BusinessName\": \"Penang Flavours\",\n",
-    "                 \"BusinessType\": \"Restaurant\",\n",
-    "                 \"LocalAuthorityName\": \"Greenwich\"}"
+    "new_restaurant = {\n",
+    "    \"BusinessName\":\"Penang Flavours\",\n",
+    "    \"BusinessType\":\"Restaurant/Cafe/Canteen\",\n",
+    "    \"BusinessTypeID\":\"\",\n",
+    "    \"AddressLine1\":\"Penang Flavours\",\n",
+    "    \"AddressLine2\":\"146A Plumstead Rd\",\n",
+    "    \"AddressLine3\":\"London\",\n",
+    "    \"AddressLine4\":\"\",\n",
+    "    \"PostCode\":\"SE18 7DY\",\n",
+    "    \"Phone\":\"\",\n",
+    "    \"LocalAuthorityCode\":\"511\",\n",
+    "    \"LocalAuthorityName\":\"Greenwich\",\n",
+    "    \"LocalAuthorityWebSite\":\"http://www.royalgreenwich.gov.uk\",\n",
+    "    \"LocalAuthorityEmailAddress\":\"health@royalgreenwich.gov.uk\",\n",
+    "    \"scores\":{\n",
+    "        \"Hygiene\":\"\",\n",
+    "        \"Structural\":\"\",\n",
+    "        \"ConfidenceInManagement\":\"\"\n",
+    "    },\n",
+    "    \"SchemeType\":\"FHRS\",\n",
+    "    \"geocode\":{\n",
+    "        \"longitude\":\"0.08384000\",\n",
+    "        \"latitude\":\"51.49014200\"\n",
+    "    },\n",
+    "    \"RightToReply\":\"\",\n",
+    "    \"Distance\":4623.9723280747176,\n",
+    "    \"NewRatingPending\":True\n",
+    "}"
    ]
   },
   {
@@ -205,7 +230,7 @@
     {
      "data": {
       "text/plain": [
-       "InsertOneResult(ObjectId('665413fcd18b85fa150dae6f'), acknowledged=True)"
+       "InsertOneResult(ObjectId('66544da11bee302fb3e93c69'), acknowledged=True)"
       ]
      },
      "execution_count": 9,
@@ -228,10 +253,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'BusinessName': 'Penang Flavours',\n",
-      " 'BusinessType': 'Restaurant',\n",
+      "{'AddressLine1': 'Penang Flavours',\n",
+      " 'AddressLine2': '146A Plumstead Rd',\n",
+      " 'AddressLine3': 'London',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': '',\n",
+      " 'Distance': 4623.972328074718,\n",
+      " 'LocalAuthorityCode': '511',\n",
+      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
       " 'LocalAuthorityName': 'Greenwich',\n",
-      " '_id': ObjectId('665413fcd18b85fa150dae6f')}\n"
+      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      " 'NewRatingPending': True,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'SE18 7DY',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('66544da11bee302fb3e93c69'),\n",
+      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
     }
    ],
@@ -263,7 +304,7 @@
      "text": [
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('665413f2d68b86fee1e07409')}\n"
+      " '_id': ObjectId('66544d977f6e63fad15f339e')}\n"
      ]
     }
    ],
@@ -271,9 +312,9 @@
     "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n",
     "query = {'BusinessType': 'Restaurant/Cafe/Canteen'}\n",
     "fields = {\"BusinessTypeID\": 1, \"BusinessType\": 1}\n",
-    "results = establishments.find(query, fields)\n",
+    "results = establishments.find_one(query, fields)\n",
     "\n",
-    "pprint(results[0])"
+    "pprint(results)"
    ]
   },
   {
@@ -321,11 +362,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'BusinessName': 'Penang Flavours',\n",
-      " 'BusinessType': 'Restaurant',\n",
+      "{'AddressLine1': 'Penang Flavours',\n",
+      " 'AddressLine2': '146A Plumstead Rd',\n",
+      " 'AddressLine3': 'London',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Penang Flavours',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
+      " 'Distance': 4623.972328074718,\n",
+      " 'LocalAuthorityCode': '511',\n",
+      " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
       " 'LocalAuthorityName': 'Greenwich',\n",
-      " '_id': ObjectId('665413fcd18b85fa150dae6f')}\n"
+      " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+      " 'NewRatingPending': True,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'SE18 7DY',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('66544da11bee302fb3e93c69'),\n",
+      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
     }
    ],
@@ -428,32 +484,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'St Marys Church Of England Primary School',\n",
-      " 'AddressLine2': 'Warren Road',\n",
-      " 'AddressLine3': 'Folkestone',\n",
-      " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'St Marys COE (aided) Primary School',\n",
-      " 'BusinessType': 'School/college/university',\n",
-      " 'BusinessTypeID': 7845,\n",
+      "{'AddressLine1': 'Wear Bay Road',\n",
+      " 'AddressLine2': 'Folkestone',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Wear Bay Bowls Club',\n",
+      " 'BusinessType': 'Pub/bar/nightclub',\n",
+      " 'BusinessTypeID': 7843,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4591.871474174837,\n",
-      " 'FHRSID': 289353,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000002468',\n",
+      " 'Distance': 4591.821311183521,\n",
+      " 'FHRSID': 647177,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000041489',\n",
       " 'LocalAuthorityCode': '188',\n",
       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT19 6QH',\n",
-      " 'RatingDate': '2016-09-13T00:00:00',\n",
-      " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'PostCode': 'CT19 6PY',\n",
+      " 'RatingDate': '2014-03-31T00:00:00',\n",
+      " 'RatingKey': 'fhrs_4_en-gb',\n",
+      " 'RatingValue': '4',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('665413f2d68b86fee1e076ee'),\n",
-      " 'geocode': {'latitude': '51.085797', 'longitude': '1.194762'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/289353',\n",
+      " '_id': ObjectId('66544d977f6e63fad15f3683'),\n",
+      " 'geocode': {'latitude': '51.086058', 'longitude': '1.196408'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/647177',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -463,7 +519,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}\n"
+      " 'scores': {'ConfidenceInManagement': 10, 'Hygiene': 5, 'Structural': 5}}\n"
      ]
     }
    ],
@@ -588,9 +644,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'RatingValue': 5,\n",
-      " '_id': ObjectId('665413f2d68b86fee1e076ee'),\n",
-      " 'geocode': {'latitude': 51.085797, 'longitude': 1.194762}}\n"
+      "{'RatingValue': 4,\n",
+      " '_id': ObjectId('66544d977f6e63fad15f3683'),\n",
+      " 'geocode': {'latitude': 51.086058, 'longitude': 1.196408}}\n"
      ]
     }
    ],
